--- a/src/StudentWall_frontend/src/index.html
+++ b/src/StudentWall_frontend/src/index.html
@@ -1,24 +1,143 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>StudentWall</title>
-    <base href="/" />
-    <link rel="icon" href="favicon.ico" />
-    <link type="text/css" rel="stylesheet" href="main.css" />
-  </head>
-  <body>
-    <main>
-      <img src="logo2.svg" alt="DFINITY logo" />
-      <br />
-      <br />
-      <form action="#">
-        <label for="name">Enter your name: &nbsp;</label>
-        <input id="name" alt="Name" type="text" />
-        <button type="submit">Click Me!</button>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
+  <link rel="icon" href="favicon.ico" />
+  <title>Student Wall by MonkeyDDeveloper</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,500;1,300&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <style>
+    .font-rubik {
+      font-family: 'Rubik', sans-serif;
+    }
+
+    .italic {
+      font-style: italic;
+    }
+  </style>
+</head>
+
+<body class="bg-dark">
+  <div class="container w-75 .mx-auto my-5">
+    <div class="row justify-content-center my-5">
+      <div class="col-12 text-center">
+        <h1 class="font-rubik text-white">
+          Student Wall
+        </h1>
+        <h3 class="font-rubik italic text-info">
+          Write the updates for your school or team
+        </h3>
+      </div>
+    </div>
+    <div class="row justify-content-center my-5">
+      <form id="loginForm" role="search">
+        <span id="notLoggedMessageContainer"></span>
+        <div class="row justify-content-center">
+          <div class="col-xs-12 col-sm-12 col-md-7">
+            <img class="img-fluid my-3" src="logo2.svg" alt="intenet identity" title="intenet identity">
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-7 my-2">
+            <input id="userName" class="form-control" type="text" placeholder="username"
+              title="this is the name you gonna use for sending messages" style="display: none;" required>
+          </div>
+          <div id="buttonToLoginContainer" class="col-xs-12 col-sm-12 col-md-7 my-2">
+
+          </div>
+        </div>
       </form>
-      <section id="greeting"></section>
-    </main>
-  </body>
+      <form id="logoutForm" role="search">
+        <div class="row justify-content-center">
+          <div id="buttonToLogoutContainer" class="col-xs-12 col-sm-12 col-md-7 my-2">
+
+          </div>
+        </div>
+      </form>
+    </div>
+    <div id="sendMessageFormContainer" class="row justify-content-center my-5">
+    </div>
+    <div id="messagesContainerTitle" class="row justify-content-center my-5">
+
+    </div>
+    <div id="messagesContainer" class="row justify-content-center my-5" style="max-height: 80vh; overflow-x: hidden; overflow-y: scroll;">
+
+    </div>
+    <h6 class="row justify-content-center my-5">
+      <p class="font-rubik italic text-info text-start">Developed by MonkeyDDeveloper</p>
+      <p class="font-rubik italic text-info text-start">WhatsApp <a href="https://wa.me/593988433654" target="_blank" rel="noreferrer">+593 988433654</a></p>
+      <p class="font-rubik italic text-info text-start">fraydeveloper@gmail.com</p>
+    </h6>
+  </div>
+  <template id="sendMessageFormTemplate">
+    <div class="col-xs-12 col-sm-12 col-md-7 my-2">
+      <form id="sendMessageForm">
+        <h3 class="text-white font-rubik">Send an update</h3>
+        <div class="row align-items-stretch">
+          <div class="col-12">
+            <div class="row">
+              <div class="col-12 my-2">
+                <div class="input-group">
+                  <span class="input-group-text">Message</span>
+                  <textarea rows=2 cols=1 class="form-control" name="content" placeholder="your text message here"
+                    title="this is the message update for your team" required></textarea>
+                </div>
+              </div>
+              <div class="col-md-12 align-self-stretch my-2">
+                <div class="row justify-content-between">
+                  <div class="col-xs-12 col-sm-12 col-md-6 my-1 align-self-stretch">
+                    <button class="btn btn-outline-info w-100 h-100 submitButton" title="send your update"
+                      type="submit">Send message</button>
+                  </div>
+                  <div class="col-xs-12 col-sm-12 col-md-5 my-1 align-self-stretch">
+                    <button style="display: none" class="btn btn-outline-danger w-100 h-100 cancelButton"
+                      title="send your update" type="button">Cancel</button>
+                  </div>
+                </div>
+                <input type="hidden" id="messageToEditId" value="null">
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+  </template>
+  <template id="messageTemplate">
+    <div class="col-xm-12 col-sm-12 col-md-7">
+      <div class="card bg-dark mb-2 border-info">
+        <div class="card-body">
+          <div class="card-header mb-3 border-bottom border-bottom-white">
+            <div class="row w-100 justify-content-between">
+              <div class="col-xs-12 col-sm-12 col-md-6 my-1 user_message_info">
+                <h5 class="card-title text-info userName"></h5>
+                <h6 class="card-subtitle text-secondary text-nowrap overflow-hidden"><small
+                    class="creator text-nowrap overflow-hidden"></small></h6>
+              </div>
+              <div class="col-xs-12 col-sm-12 col-md-6 my-1 action_buttons text-white text-end">
+                <button class="btn btn-outline-primary text-white voteButton" title="Give/Remove like">
+                  <span class="vote"></span>
+                  <i class="bi bi-hand-thumbs-up noVotedIcon"></i>
+                  <i class="bi bi-hand-thumbs-up-fill votedIcon"></i>
+                </button>
+                <button class="btn btn-outline-primary text-white editButton" title="Edit">
+                  <i class="bi bi-pencil-square"></i>
+                </button>
+                <button class="btn btn-outline-danger text-white deleteButton" title="Delete">
+                  <i class="bi bi-trash"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <p class="card-text text-white mx-auto content" style="width: 90%;"></p>
+        </div>
+      </div>
+    </div>
+  </template>
+</body>
+
 </html>
