--- a/src/StudentWall_frontend/src/index.html
+++ b/src/StudentWall_frontend/src/index.html
@@ -92,7 +92,7 @@
               <div class="col-12 my-2">
                 <label for="formFileSm" class="form-label text-white font-rubik">Add a small photo</label>
                 <input class="form-control form-control-sm" id="file" type="file">
-                <button class="form-control form-control-sm font-rubik text-white" id="deleteFile" type="button">Delete file</button>
+                <button class="form-control form-control-sm font-rubik my-2" id="deleteFile" type="button">Delete file</button>
                 <p id="fileNameDisplay" class="text-white font-rubik"></p>
               </div>
               <div class="col-md-12 align-self-stretch my-2">
