--- a/src/StudentWall_frontend/src/index.html
+++ b/src/StudentWall_frontend/src/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' cdvfile:"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <meta http-equiv="Content-Security-Policy" content="media-src https://q6h7l-hyaaa-aaaan-qds4a-cai.icp0.io"> -->
   <base href="/">
   <link rel="icon" href="favicon.ico" />
   <title>Student Wall by MonkeyDDeveloper</title>
@@ -22,6 +22,23 @@
     .italic {
       font-style: italic;
     }
+    /* @media (max-width: 767px) {
+      video {
+        width: 100%;
+      }
+    }
+
+    @media (min-width: 768px) and (max-width: 991px) {
+      video {
+        width: 500px;
+      }
+    }
+
+    @media (min-width: 992px) {
+      video {
+        width: 500px;
+      }
+    } */
   </style>
 </head>
 
@@ -90,7 +107,7 @@
                 </div>
               </div>
               <div class="col-12 my-2">
-                <label for="formFileSm" class="form-label text-white font-rubik">Add a small photo</label>
+                <label for="formFileSm" class="form-label text-white font-rubik">Add a small photo or video (mp4) (optional)</label>
                 <input class="form-control form-control-sm" id="file" type="file">
                 <button class="form-control form-control-sm font-rubik my-2" id="deleteFile" type="button">Delete file</button>
                 <p id="fileNameDisplay" class="text-white font-rubik"></p>
@@ -148,7 +165,7 @@
             </div>
           </div>
           <div class="row justify-content-center">
-            <div class="videoContainer col-xs-12 col-sm-12 col-md-7" display="none">
+            <div class="videoContainer col-xs-12 col-sm-12 col-md-9 col-lg-8 col-xl-7" display="none">
               
             </div>
           </div>
